# awesome

./: .clang-format  .gitignore  CMakeLists.txt  awesomeConfig.cmake  meson.build  meson.options
build-utils/: atoms-ext.sh
src/: awesome-version-internal.h.in  awesome.c  awesome.cpp  awesome.h  banning.cpp  banning.h  color.cpp  color.h  config.h.in  dbus.cpp  dbus.h  draw.cpp  draw.h  event.cpp  event.h  ewmh.cpp  ewmh.h  globalconf.h  globals.h  keygrabber.cpp  keygrabber.h  luaa.cpp  luaa.h  mouse.cpp  mouse.h  mousegrabber.cpp  mousegrabber.h  options.cpp  options.h  property.cpp  property.h  root.cpp  selection.cpp  selection.h  spawn.cpp  spawn.h  stack.cpp  stack.h  strut.cpp  strut.h  (+9 more)
src/common/: array.h  atoms.cpp  atoms.h  backtrace.cpp  backtrace.h  buffer.cpp  buffer.h  luaclass.cpp  luaclass.h  luahdr.h  lualib.cpp  lualib.h  luaobject.cpp  luaobject.h  signal.h  util.cpp  util.h  version.cpp  version.h  xcursor.cpp  xcursor.h  xembed.cpp  xembed.h  xutil.cpp  xutil.h
src/objects/: button.cpp  button.h  client.cpp  client.h  drawable.cpp  drawable.h  drawin.cpp  drawin.h  key.cpp  key.h  screen.cpp  screen.h  selection_acquire.cpp  selection_acquire.h  selection_getter.cpp  selection_getter.h  selection_transfer.cpp  selection_transfer.h  selection_watcher.cpp  selection_watcher.h  tag.cpp  tag.h  window.cpp  window.h
src/xcbcpp/: xcb.h
templates/: awesome-version-internal.h.in  config.h.in
